style fix for visibility

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -60,4 +60,8 @@ body {
     margin: auto;
     margin-top: 0.5rem;
   }
+  p {
+    color: white;
+    margin: auto;
+  }
 }
